DockerContainer instead of Docker

--- a/README
+++ b/README
@@ -47,3 +47,6 @@ https://tomgregory.com/jenkins/using-jenkins-configuration-as-code-to-setup-aws-
 
 Werde ich mir die nächsten Tage mal anschauen. 
 
+25.10.2024
+Ich versuche nun einen Jenkins Slave zu erstellen
+
